fix student_page
